--- a/maps/Makefile
+++ b/maps/Makefile
@@ -7,9 +7,9 @@ INCLUDE = -I../vomit/include
 LIBS = -lsfml-window -lsfml-graphics -lsfml-system
 
 # Направление поиска исходных файлов для make
-vpath %.cpp ./
+vpath %.cpp ../vomit/src/ ../vomit/src/game/ ../vomit/src/application/ ../vomit/src/menu/ ../vomit/src/application/loader/
 # Направление поиска заголовочных файлов для make
-vpath %.hpp ./vomit/include/
+vpath %.hpp ../vomit/include/
 # Установка флагов для компиляции объектных файлов
 FLAGS = -Wall -c -g -std=c++98 $(INCLUDE)
 # Установка флагов для линковщика
@@ -22,8 +22,12 @@ LDFLAGS = $(LIBS)
 # Пример: MAINOBJ = framework.o
 
 MAINOBJ = visualize.o
+VHOLDER = holder.o
+VLOADER = loader.o
+VPOMLOADER = partOfMapLoader.o # POM - Part of map
+VLOADEREXCEPTION = loaderException.o
 
-ALLOBJ	= $(MAINOBJ)
+ALLOBJ	= $(MAINOBJ) $(VLOADER) $(VPOMLOADER) $(VLOADEREXCEPTION)
 
 EXE := visualize
 
@@ -39,6 +43,21 @@ $(EXE) : $(ALLOBJ)
 $(MAINOBJ) : %.o : %.cpp
 		$(CC) $< $(FLAGS) -o $@
 		
+$(VHOLDER) : %.o : %.cpp
+		$(CC) $< $(FLAGS) -o $@
+
+$(VLOADER) : %.o : %.cpp
+		$(CC) $< $(FLAGS) -o $@
+
+$(VOBSLOADER) : %.o : %.cpp
+		$(CC) $< $(FLAGS) -o $@
+
+$(VPOMLOADER) : %.o : %.cpp
+		$(CC) $< $(FLAGS) -o $@
+
+$(VLOADEREXCEPTION) : %.o : %.cpp
+		$(CC) $< $(FLAGS) -o $@
+	
 # Очистка директории от объектных файлов
 .PHONY: clean
 clean :
