--- a/config/obstacle.cfg
+++ b/config/obstacle.cfg
@@ -19,10 +19,24 @@
 	[/path]
 [/corner]
 
+[box]
+	[texture] null [/texture]
+	[path]
+		M 0,0 l 0,40 40,0 0,-40
+	[/path]
+[/box]
+
+[wide_wall]
+	[texture] null [/texture]
+	[path]
+		M 0,0 l 0,150 100,0 0,-150
+	[/path]
+[/wide_wall]
+
 [bend_left]
 	[texture] null [/texture]
 	[path]
-		M 0,0 250,0 c 0,0 -335.370641,170.71578 -10.10152,485 L 0,485
+		M 22.857143,95.219346 C 28.27441,71.902443 91.278811,-48.385741 130.71429,50.933632 207.96473,245.49105 20.380989,422.11615 22.857143,95.219346
 	[/path]
 [/bend_left]
 
