--- a/config/partOfMap.cfg
+++ b/config/partOfMap.cfg
@@ -13,6 +13,13 @@
 		[scale] 1,2.8 [/scale]
 	[/2]
 
+	[3]
+		[name] wide_wall [/name]
+		[position] 300,700 [/position]
+		[rotation] 45 [/rotation]
+		[scale] 1,1 [/scale]
+	[/3]
+
 [/start]
 
 [lime]
