добавлены текстуры препятствий
НУЖНО ПОДУМАТЬ НАД ГОЛОВАСТИКОМ

--- a/config/obstacle.cfg
+++ b/config/obstacle.cfg
@@ -1,12 +1,12 @@
 [lime]
-	[texture] null  [/texture]
+	[texture] background  [/texture]
 	[path]
 	M 0,0 C 3,0.5 162.15,63 0,150
 	[/path]
 [/lime]
 
 [wall]
-	[texture] null [/texture]
+	[texture] wall [/texture]
 	[path] 
 	M 0,0 0,500 50,500 50,0		
 	[/path]
