--- a/config/texture.cfg
+++ b/config/texture.cfg
@@ -4,3 +4,4 @@
 [background] media/menu/screen.jpg [/background]
 [gamePause] media/game/pause.png [/gamePause]
 [gameOver] media/game/gameover.jpg [/gameOver]
+[wall] media/game/wall.jpeg [/wall]
