Добвавлен класс VisualizeHolder для разработки уровней. Этот класс позволяет просматрмивать все загруженные в resourceHolder уровни.

--- a/config/partOfMap.cfg
+++ b/config/partOfMap.cfg
@@ -93,6 +93,53 @@
 
 [/toilet]
 
+[box_patty]
+
+	[1]
+		[name] box [/name]
+		[position] 250,110 [/position]
+		[rotation] 0 [/rotation]
+		[scale] 8,8 [/scale]
+	[/1]
+
+	[4]
+		[name] box [/name]
+		[position] 10,610 [/position]
+		[rotation] 0 [/rotation]
+		[scale] 8,8 [/scale]
+	[/4]
+
+	[5]
+		[name] box [/name]
+		[position] 500,610 [/position]
+		[rotation] 0 [/rotation]
+		[scale] 8,8 [/scale]
+	[/5]
+
+	[6]
+		[name] box [/name]
+		[position] 250,1080 [/position]
+		[rotation] 0 [/rotation]
+		[scale] 8,8 [/scale]
+	[/6]
+
+
+	[2]
+		[name] wall [/name]
+		[position] 750,	0 [/position]
+		[rotation] 0 [/rotation]
+		[scale] 1,2.8 [/scale]
+	[/2]
+
+	[3]
+		[name] wall [/name]
+		[position] 0,0 [/position]
+		[rotation] 0 [/rotation]
+		[scale] 1,2.8 [/scale]
+	[/3]
+
+[/box_patty]
+
 [frustrate]
 
 	[2]
@@ -111,7 +158,7 @@
 
 	[1]
 		[name] bend_left [/name]
-		[position] 50,0 [/position]
+		[position] 50,200 [/position]
 		[rotation] 0 [/rotation]
 		[scale] 1,1 [/scale]
 
@@ -154,6 +201,68 @@
 
 	[/9]
 
-
 [/frustrate]
 
+[prospect]
+
+	[1]
+		[name] wall [/name]
+		[position] 750,	0 [/position]
+		[rotation] 0 [/rotation]
+		[scale] 1,2.8 [/scale]
+	[/1]
+
+	[2]
+		[name] wall [/name]
+		[position] 0,0 [/position]
+		[rotation] 0 [/rotation]
+		[scale] 1,2.8 [/scale]
+	[/2]
+
+	[3]
+		[name] coridor [/name]
+		[position] 50,720 [/position]
+		[rotation] 0 [/rotation]
+		[scale] 6,1.7 [/scale]
+	[/3]
+
+	[4]
+		[name] coridor [/name]
+		[position] 750,680 [/position]
+		[rotation] 180 [/rotation]
+		[scale] 6,1.7 [/scale]
+	[/4]
+
+	[5]
+		[name] corner [/name]
+		[position] 50,900 [/position]
+		[rotation] 270 [/rotation]
+		[scale] 3.6,5 [/scale]
+	[/5]
+
+	[6]
+		[name] corner [/name]
+		[position] 750,500 [/position]
+		[rotation] 90 [/rotation]
+		[scale] 3.6,5 [/scale]
+	[/6]
+
+[/prospect]
+
+[street]
+
+	[1]
+		[name] wall [/name]
+		[position] 750,	0 [/position]
+		[rotation] 0 [/rotation]
+		[scale] 1,2.8 [/scale]
+	[/1]
+
+	[2]
+		[name] wall [/name]
+		[position] 0,0 [/position]
+		[rotation] 0 [/rotation]
+		[scale] 1,2.8 [/scale]
+	[/2]
+
+[/street]
