Активирован механизм выборки блока по уровню
Теперь части карты (блоки) выбираются в зависимости от того, до какого
уровня сложности достиг игрок

--- a/config/partOfMap.cfg
+++ b/config/partOfMap.cfg
@@ -47,6 +47,9 @@
 [/lime]
 
 [toilet]
+
+	[level] 3 [/level]
+
 	[1]
 		[name] wide_wall [/name]	
 		[position] 500,0 [/position]
@@ -95,6 +98,8 @@
 
 [box_patty]
 
+	[level] 3 [/level]
+
 	[1]
 		[name] box [/name]
 		[position] 250,110 [/position]
@@ -141,6 +146,8 @@
 [/box_patty]
 
 [frustrate]
+
+	[level] 2 [/level]
 
 	[2]
 		[name] wall [/name]
@@ -205,6 +212,8 @@
 
 [prospect]
 
+	[level] 1 [/level]
+
 	[1]
 		[name] wall [/name]
 		[position] 750,	0 [/position]
@@ -250,6 +259,8 @@
 [/prospect]
 
 [street]
+
+	[level] 1 [/level]
 
 	[1]
 		[name] wall [/name]
