Отлажена работа загрузчика настроек. Создан словарь тэгов для удобочитаемости программы и улучшения её модернизируемости.

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -1,1 +1,6 @@
-[startVelocity] 15 [/startVelocity]
+[startVelocity] 300 [/startVelocity]
+[startLevel] 1 [/startLevel]
+[rigidity] 10 [/rigidity]
+[obstaclePath] ./config/obstacle.cfg [/obstaclePath]
+[partOfMapPath] ./config/partOfMap.cfg [/partOfMapPath]
+[texturePath] ./config/texture.cfg [/texturePath]
